cmake_minimum_required(VERSION 3.9)

if(NOT DEFINED CMAKE_CUDA_STANDARD)
    set(CMAKE_CUDA_STANDARD 17)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
endif()

if(NOT DEFINED CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
  set(CMAKE_CUDA_ARCHITECTURES 75)
endif()

project(ray_tracing_in_one_weekend_in_cuda LANGUAGES CUDA CXX)

add_subdirectory(01_output)
add_subdirectory(02_vec3)
add_subdirectory(03_rays)
add_subdirectory(04_sphere)
add_subdirectory(05_normals)
add_subdirectory(06_antialiasing)
add_subdirectory(07_diffuse)
add_subdirectory(08_metal)
add_subdirectory(09_dielectrics)
add_subdirectory(10_camera)
add_subdirectory(11_defocus_blur)
add_subdirectory(12_where_next)
